# jax_cppn

./: README.md  pyproject.toml
examples/: animated_cppn.py  rgb_cppn.py
src/jax_cppn/: __init__.py  activations.py  aggregations.py  cppn.py  functional_network.py  network.py  node.py  vis.py
